# fiesta

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: python-publish.yml
benchmarks/: README.md  benchmark_afterglowpy_tophat.py
benchmarks/GRB/: benchmark_afterglowpy_tophat.py
benchmarks/KN/: benchmark_Bu2019lm.py
docs/: README.md
examples/: .gitignore  injection_tophat.py  likelihood.ipynb  load_data.py  numpyro_AT2017gfo_Bu2019lm.py  plot_corner.ipynb  run_AT2017gfo_Bu2019lm.py  run_AT2017gfo_Bu2023Ye.py  run_GRB170817_tophat.py  test_run.py  test_run_Bu2019lm.py  test_run_Bu2022Ye.py  train_Bu2019lm.py  train_Bu2022Ye.py
examples/KN/: injection_Bu2019lm.py  numpyro_AT2017gfo_Bu2019lm.py  run_AT2017gfo_Bu2019lm.py
examples/data/: README.md
examples/figures/: .gitignore
examples/outdir_AT2017gfo_Bu2019lm/: results_training.npz
src/fiesta/: base.py  constants.py  conversions.py  models_utilities.py  train.py  utils.py
src/fiesta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
trained_models/: .gitignore  benchmark_afterglowpy_tophat.py  train_Bu2019lm.py  train_Bu2022Ye.py  train_Bu2023Ye.py  train_afterglowpy_tophat.py
trained_models/Bu2019lm/: .gitignore  2massh.pkl  2massj.pkl  2massks.pkl  Bu2019lm.joblib  Bu2019lm_metadata.pkl  bessellb.pkl  besselli.pkl  bessellr.pkl  bessellux.pkl  bessellv.pkl  cspk.pkl  preprocessed_data_training.npz  preprocessed_data_validation.npz  ps1__g.pkl  ps1__i.pkl  ps1__r.pkl  ps1__y.pkl  ps1__z.pkl  raw_data.npz  raw_data_validation.npz  sdss__g.pkl  sdss__i.pkl  sdss__r.pkl  sdss__u.pkl  (+12 more)
(+70 files in other folders)
